Bug 156267 - CRASH: after copy paste and undo
Summary: CRASH: after copy paste and undo
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.5.6 target:7.6...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-07-13 08:06 UTC by Xisco Faulí
Modified: 2023-10-23 11:12 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-07-13 08:06:10 UTC
Steps to reproduce:
1. Open attachment 90992 [details] from bug 72776
2. Select all
3. Copy
4. Paste
5. Undo

-> Crash

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a6b938d324798433298ec7320c813c82ace4590
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-07-13 08:06:54 UTC
This crash started to happen after

author	Michael Stahl <michael.stahl@allotropia.de>	2023-05-08 16:38:03 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-05-09 10:34:40 +0200
commit d81379db730a163c5ff75d4f3a3cddbd7b5eddda (patch)
tree 27ceb91b3da10a4e00df329a73512b44afde00c6
parent edf471ba8b5a69ce26e68eff26283b304c4c9a9e (diff)
tdf#154877 sw: generalise ExtendedSelectAll()

Adding Cc: to Michael Stahl
Comment 2 Commit Notification 2023-07-14 18:27:39 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4270552395600487f9d680cfdc9cd0ad6f457497

tdf#156267 sw: remove DdeBookmarks in SwDoc::DelTable()

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2023-07-14 18:28:54 UTC
fixed on master
Comment 4 Commit Notification 2023-07-24 20:54:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d60f4042bdc1dac465d38fcfae85b34630759be3

tdf#156267 sw: remove DdeBookmarks in SwDoc::DelTable()

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-07-25 08:16:10 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/84079e1b0319519736c9bc6dfe02474509d51add

tdf#156267 sw: remove DdeBookmarks in SwDoc::DelTable()

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-10-23 11:12:53 UTC
OmkarAcharekar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/242bf93ae380d470e9fe34f8badf261ad203728b

tdf#156267: sw_docnode: Add test for remove DdeBookmarks in SwDoc::DelTable()

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.