tdf#156267 sw: remove DdeBookmarks in SwDoc::DelTable()

On Copy, a SwTransferDdeLink is created, which also creates a
DDE_BOOKMARK (it's the only thing that does that) without Undo.

On Delete, the DelTable() creates SwUndoDelete which creates a
SwHistoryBookmark; then the DeleteAndJoin() deletes the DdeBookmark.

On Undo, the SwHistoryBookmark doesn't find its bookmark, and crashes.

Because the DdeBookmark is artificial and deliberately created without
Undo, DelTable() should prevent the SwHistoryBookmark by deleting it
first.

(regression from commit d81379db730a163c5ff75d4f3a3cddbd7b5eddda)

Change-Id: Ib24c788a49a6fee364b44a1dbc8d53870c074596
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154440
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 4270552395600487f9d680cfdc9cd0ad6f457497)